@startuml

title __INFO's Class Diagram__\n

  namespace cz.utb.thesisapp {
    namespace ui.info {
      class cz.utb.thesisapp.ui.info.InfoFragment {
          ~ data : LineData
          ~ dataSets : ArrayList<ILineDataSet>
          ~ root : View
          ~ setDelays : LineDataSet
          ~ setDownloads : LineDataSet
          ~ setUploads : LineDataSet
          {static} - TAG : String
          - mChart : LineChart
          - thread : Thread
          + onCreateView()
          + onPause()
          + onResume()
          + onStop()
          + startPlot()
          - getTime()
          - plot()
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace ui.info {
      class cz.utb.thesisapp.ui.info.InfoViewModel {
          + delays : List
          + download : List
          + upload : List
          ~ setDelays : LineDataSet
          ~ setDownloads : LineDataSet
          ~ setUploads : LineDataSet
          - delay : MutableLiveData<LineDataSet>
          - dl : MutableLiveData<LineDataSet>
          - downloadSpeedText : MutableLiveData<String>
          - progress : MutableLiveData<Integer>
          - up : MutableLiveData<LineDataSet>
          - uploadSpeedText : MutableLiveData<String>
          + InfoViewModel()
          + delayAddEntry()
          + downloadAddEntry()
          + getDelay()
          + getDelays()
          + getDl()
          + getDownloadSpeedText()
          + getProgress()
          + getText()
          + getUp()
          + getUploadSpeedText()
          + setDownloadSpeedText()
          + setProgress()
          + setUploadSpeedText()
          + uploadAddEntry()
      }
    }
  }
  

  cz.utb.thesisapp.ui.info.InfoFragment -up-|> androidx.fragment.app.Fragment
  cz.utb.thesisapp.ui.info.InfoFragment o-- cz.utb.thesisapp.ui.info.InfoViewModel : infoViewModel
  cz.utb.thesisapp.ui.info.InfoViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
